--- a/my_website/index.html
+++ b/my_website/index.html
@@ -32,7 +32,7 @@
 
 </div>
 
-<div class="blog">
+<div class="blog" style="background: black; color: white;">
     <h1>Blog Header</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias necessitatibus non aut accusantium eligendi ullam at quae amet, <a href="3"> eum illum  </a>ad? Saepe laboriosam, repellendus libero molestiae ullam incidunt quaerat quos.</p>
 
@@ -42,6 +42,9 @@
     <h1>Blog Header</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias necessitatibus non aut accusantium eligendi ullam at quae amet, <a href="3"> eum illum  </a>ad? Saepe laboriosam, repellendus libero molestiae ullam incidunt quaerat quos.</p>
 
+</div >
+<div>
+    new code 
 </div>
     <h1>Now here we write some semantic tag</h1>
 
