--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>Heading 1</h1>
+    <h1>Heading adding in main branch 1</h1>
     <p>using second branch to add ne code</p>
     <h3> heading 3 </h3>
     <p>adding in to new branch</p>
