--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>Heading 1</h1>
+    <h1>Heading adding line in new branch 1</h1>
 
     <h3> heading 3 </h3>
     <p>adding in to new branch</p>
