--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Oh main great this is actually UNDocument</title>
 </head>
 <body>
-    
+    <img src="flag.jpg" alt="">
     <h1>Heading adding in main branch 1</h1>
     <p>using second branch to add ne code</p>
     <h3> heading 3 </h3>
