--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Oh main great this is actually UNDocument</title>
+    <link rel="stylesheet" href="style.css">
+    <title>My Site</title>
 </head>
 <body>
-    <img src="flag.jpg" alt="">
-    <h1>Heading adding in main branch 1</h1>
-    <p>using second branch to add ne code</p>
-    <h3> heading 3 </h3>
-    <p>adding in to new branch</p>
-    <p>new line add in new branch</p>
-    
-
+    <section>
+        <div class="half-width">
+            <h1>Wellcome To</h1>
+            <h1> <span class="orange">My</span> Website</h1>
+            <h3>World Class Web Developer</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa fuga odit reiciendis voluptate doloribus numquam iste nemo libero, accusamus esse maxime voluptas autem, odio dolore quisquam ipsam porro saepe sed?</p>
+        </div>
+        <div class="half-width">
+            <img src="images/my-img.jpg" alt="">
+        </div>
+    </section>
 </body>
 </html>
