final submission of website

--- a/index.html
+++ b/index.html
@@ -8,16 +8,44 @@
     <title>My Site</title>
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Wellcome To</h1>
             <h1> <span class="orange">My</span> Website</h1>
             <h3>World Class Web Developer</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa fuga odit reiciendis voluptate doloribus numquam iste nemo libero, accusamus esse maxime voluptas autem, odio dolore quisquam ipsam porro saepe sed?</p>
+            <a target="_blank" href="#" class="button" >Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/my-img.jpg" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/my-img.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Hey I am ridoy </h2>
+            <h3>Let ue know your choice</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nam dolore rem quis, reiciendis iusto tempora cupiditate, eaque asperiores sint amet officiis. Nostrum quasi temporibus porro eaque recusandae dolore nisi.</p>
+            <a href="#" class="button"> Download my resume</a>
+
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div id="full-stack" class="half-width single-experience">
+            <h2 >Full stack Web Developer</h2>
+            <h3 class="orange">2021-Present | Pro Level Developer</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus tenetur hic cum accusantium iusto voluptatibus aliquam dolorem natus dicta voluptatum est pariatur earum minima tempore, ratione delectus dolor sunt laborum.</p>
+        </div>
+        <div id="baby" class="half-width single-experience">
+            <h2 >Baby Developer</h2>
+            <h3 class="orange">2020-2021 | Baby Developer</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus tenetur hic cum accusantium iusto voluptatibus aliquam dolorem natus dicta voluptatum est pariatur earum minima tempore, ratione delectus dolor sunt laborum.</p>
+        </div>
+    </section>
+    <footer><p>&copy; All Rights Reserved </p></footer>
 </body>
 </html>
